# Optix-Raytracer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  configure.bat  imgui.ini
cmake/: FindOptiX.cmake  InstallDefaultIni.cmake  cuda_intellisense.props.in
shaders/: CMakeLists.txt  LaunchParams.h  SceneData.h  devicePrograms.cu  device_math.h  device_programs.cu  launch_params.h  regen_ui_spv.ps1  scene_data.h  ui_scrgb.frag  ui_scrgb.vert
src/: Accel.cpp  Accel.h  Application.cpp  Application.h  CMakeLists.txt  Camera.h  EnvMap.cpp  EnvMap.h  HdriBrowser.cpp  HdriBrowser.h  Math.h  Mesh.h  Node3D.h  Scene.cpp  Scene.h  SceneLoader.cpp  Texture.cpp  Texture.h  VulkanContext.cpp  VulkanContext.h  accel.cpp  application.cpp  application.h  camera.h  hdri_browser.cpp  hdri_browser.h  main.cpp  matrix4x4.h  mesh.h  node_3d.h  scene.cpp  scene.h  scene_loader.cpp  scene_loader.h  texture.cpp  ui_scrgb_spv.h  vulkan_context.cpp  vulkan_context.h
